# cmg-near

./: .gitignore
ft/: Cargo.toml  bal.sh  go.sh  redep.sh  tx1.sh  tx2.sh
ft/src/: lib.rs
nft/: Cargo.toml  Makefile  bal.sh  bidtx.sh  buytx.sh  highlight.json  redep.sh  setenv.sh  sub.txt
nft/src/: lib.rs
rxapp/: package.json
rxapp/src/: App.css  App.js  NearContext.js  OwnerNfts.js  index.js
